# STF

./: CMakeLists.txt  README.md
analysis/: README.md  analyze.py
apriltag-0.92/: CMakeLists.txt  tagtest
example/: CMakeLists.txt  README  cameras.xml  ceres_cost_functions.h  cmod.xml  findtargets.cpp  gettruth.cpp  tags.h
